--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Welcome to gRPC Web Client!!</h1>
+    <h1>Welcome to gRPC Web Client!</h1>
     <button onclick="sendMessage()">Send Message</button> 
     <button onclick="clearLogs()">Clear Logs</button>
     <div id="output-block"></div>
